--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "php": "^7.4 || ~8.0.0",
         "composer/package-versions-deprecated": "^1.10.99",
         "doctrine/dbal": "^3.0.0",
+        "doctrine/migrations": "^3.3",
         "laminas/laminas-auradi-config": "^2.0",
         "laminas/laminas-cli": "1.2.x-dev",
         "laminas/laminas-component-installer": "^2.1.2",
